--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -1223,6 +1223,11 @@ nav ul li a:hover {
         font-size: 1.1rem;
     }
 
+    .metricas {
+        max-width: 90%;
+        margin: 0 auto;
+    }
+
     .educacion {
         width: 93vw;
         padding: 32px 2vw 24px 2vw;
